--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
     "fonts": "node scripts/fonts.js"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.6",
     "expo": "^35.0.0",
     "expo-av": "~7.0.1",
+    "expo-font": "8.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-web": "^0.11.7"
+    "react-native-gesture-handler": "~1.3.0",
+    "react-native-reanimated": "~1.2.0",
+    "react-native-safe-area-context": "~0.3.6",
+    "react-native-screens": "~1.0.0-alpha.23",
+    "react-native-web": "^0.11.7",
+    "react-navigation": "4.1.1",
+    "react-navigation-drawer": "2.3.4",
+    "react-navigation-stack": "2.1.1",
+    "react-navigation-tabs": "2.7.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
