--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-native-community/masked-view": "0.1.6",
     "expo": "^35.0.0",
     "expo-asset": "^7.0.0",
-    "expo-audioplayer": "^1.0.0",
+    "expo-audioplayer": "peeomid/reactnative_expo_audioplayer#master",
     "expo-av": "~7.0.1",
     "expo-font": "~7.0.0",
     "react": "16.8.3",
