--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-safe-area-context": "~0.3.6",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-slider": "^0.11.0",
+    "react-native-svg": "9.9.5",
     "react-native-vector-icons": "6.6.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "4.1.1",
