--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-inviewport": "1.1.0",
     "react-native-material-design": "0.3.7",
     "react-native-material-design-styles": "0.2.7",
     "react-native-reanimated": "~1.2.0",
