--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-audioplayer": "peeomid/reactnative_expo_audioplayer#master",
     "expo-av": "~7.0.1",
     "expo-font": "~7.0.0",
+    "expo-linear-gradient": "~7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
