--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
     "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/netinfo": "5.8.1",
+    "aws-amplify": "3.0.10",
+    "aws-amplify-react-native": "4.1.1",
     "expo": "^35.0.0",
     "expo-asset": "^7.0.0",
     "expo-audioplayer": "peeomid/reactnative_expo_audioplayer#master",
