--- a/package.json
+++ b/package.json
@@ -11,39 +11,39 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
-    "@react-native-community/masked-view": "0.1.6",
-    "@react-native-community/netinfo": "5.8.1",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "5.9.6",
     "aws-amplify": "3.0.10",
     "aws-amplify-react-native": "4.1.1",
-    "expo": "^35.0.0",
-    "expo-asset": "^7.0.0",
+    "expo": "^39.0.0",
+    "expo-asset": "~8.2.0",
     "expo-audioplayer": "peeomid/reactnative_expo_audioplayer#master",
-    "expo-av": "~7.0.1",
-    "expo-font": "~7.0.0",
-    "expo-linear-gradient": "~7.0.0",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "expo-av": "~8.6.0",
+    "expo-font": "~8.3.0",
+    "expo-linear-gradient": "~8.3.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-elements": "2.0.4",
-    "react-native-gesture-handler": "~1.3.0",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-inviewport": "1.1.0",
     "react-native-material-design": "0.3.7",
     "react-native-material-design-styles": "0.2.7",
-    "react-native-reanimated": "~1.2.0",
+    "react-native-reanimated": "~1.13.0",
     "react-native-responsive-screen": "^1.4.1",
-    "react-native-safe-area-context": "~0.3.6",
-    "react-native-screens": "1.0.0-alpha.23",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
     "react-native-slider": "^0.11.0",
-    "react-native-svg": "9.9.5",
+    "react-native-svg": "12.1.0",
     "react-native-vector-icons": "6.6.0",
-    "react-native-web": "^0.11.7",
+    "react-native-web": "~0.13.7",
     "react-navigation": "4.1.1",
     "react-navigation-drawer": "2.3.4",
     "react-navigation-stack": "2.1.1",
     "react-navigation-tabs": "2.7.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.1.0"
+    "babel-preset-expo": "^8.3.0"
   },
   "private": true
 }
